--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -1,52 +1,14 @@
 * { margin: 0; padding: 0; outline: none; }
-html { font-size: 62.5%; height: 101%; }
 
-body { background: #fff; font-family: "Calibri", Arial, sans-serif; }
-img { border: 0; }
 
-a { color: #3a51b2; text-decoration: none; }
-a:hover { text-decoration: underline; }
 
-h2 { font-size: 1.8em; line-height: 1.9em; margin-bottom: 15px;  }
 
-p { color: #656565; font-size: 1.2em; margin-bottom: 10px; }
-
-#wrapper { width: 640px; margin: 0 auto; padding: 30px 45px; }
 
 #inline { display: none; width: 600px; }
-
-label { margin-right: 12px; margin-bottom: 9px; font-family: Georgia, serif; color: #646464; font-size: 1.2em; }
-
-.txt { 
-display: inline-block; 
-color: #676767;
-width: 420px; 
-font-family: Arial, Tahoma, sans-serif; 
-margin-bottom: 10px; 
-border: 1px dotted #ccc; 
-padding: 5px 9px;
-font-size: 1.2em;
-line-height: 1.4em;
-}
-
-.txtarea { 
-display: block; 
-resize: none;
-color: #676767;
-font-family: Arial, Tahoma, sans-serif; 
-margin-bottom: 10px; 
-width: 500px; 
-height: 150px;
-border: 1px dotted #ccc;
-padding: 5px 9px; 
-font-size: 1.2em;
-line-height: 1.4em;
-}
-
-.txt:focus, .txtarea:focus { border-style: solid; border-color: #bababa; color: #444; }
-
-input.error, textarea.error { border-color: #973d3d; border-style: solid; background: #f0bebe; color: #a35959; }
-input.error:focus, textarea.error:focus { border-color: #973d3d; color: #a35959; }
+#inline2 { display: none; width: 600px; }
+#inline3 { display: none; width: 600px; }
+#inline4 { display: none; width: 600px; }
+#inline5 { display: none; width: 600px; }
 
 #send { 
 color: #dee5f0;
