--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -14,6 +14,7 @@
 #inline4 { display: none; width: 600px; }
 #inline5 { display: none; width: 600px; }
 .inline { display: none; width: 600px; }
+#inline100 { display: none; width: 900px; }
 
 #send { 
 color: #dee5f0;
